Added a ref or two and some basic text

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -42,10 +42,10 @@
 \begin{document}
 
 % Page heads
-\markboth{K. Niemeyer et al.}{\emph{title TBD}}
+\markboth{K. Niemeyer et al.}{title TBD}
 
 % Title portion
-\title{\emph{title TBD}}
+\title{title TBD}
 
 \author{KYLE E. NIEMEYER
 \affil{Oregon State University}
@@ -120,8 +120,7 @@ DANIEL S. KATZ
 % The remaining information (journal title, volume, article number, date, etc.) is 'auto-generated'.
 
 \begin{bottomstuff}
-This work is supported by the National Science Foundation, under
-grant CNS-0435060, grant CCR-0325197 and grant EN-CS-0329609.
+This work is supported by the National Science Foundation, under ...
 
 Author's addresses: K. E. Niemeyer, School of Mechanical, Industrial, and Manufacturing Engineering, Oregon State University; 
 A. M. Smith,
@@ -136,10 +135,23 @@ Computation Institute, University of Chicago \& Argonne National Laboratory.
 \section{Introduction}
 
 
-\section{Conclusions}
 
+\section{Related Work}
 
+Ongoing efforts by the WSSSPE Software Credit Working Group and FORCE11 Software Citation Working Group
 
+Codemeta for minimal metadata schemes in JSON and XML
+
+transitive credit for via JSON-LD~\cite{Katz:2015aa}
+
+\section{Challenges and Research Directions}
+
+key challenges include
+\begin{itemize}
+\item standardize proper format for citing software in publications, and
+\item identify necessary metadata associated with software for citation, 
+\item develop infrastructure to support indexing of software citations along with (or complementary to) the existing publication citation ecosystem.
+\end{itemize}
 
 % Acknowledgments
 %\begin{acks}
@@ -154,7 +166,7 @@ Computation Institute, University of Chicago \& Argonne National Laboratory.
                              % Gerry Murray - March 2012
 
 % History dates
-\received{Month 2016}{Month 2016}{Month 2016}
+\received{Month Year}{Month Year}{Month Year}
 
 %% Electronic Appendix
 %\elecappendix
