--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -204,6 +204,98 @@
 @string{zangewmathphys = {Z. Angew. Math. Phys.}}
 
 
+@misc{CodeMeta,
+	Author = {Carl Boettiger and Matt Jones and Arfon M Smith and Yolanda Gil and Martin Fenner and Lars Holm Nielsen and Mark Hahnel},
+	Date-Added = {2016-01-12 08:53:31 +0000},
+	Date-Modified = {2016-01-12 09:10:50 +0000},
+	Howpublished = {\url{http://codemeta.github.io/}, Accessed: 2016-01-12},
+	Title = {{CodeMeta}},
+	Year = {2016}}
+
+@article{WSSSPE2,
+	Author = {Daniel S. Katz and Sou-Cheng T. Choi and Nancy Wilkins-Diehr and Neil {Chue Hong} and Colin C. Venters and James Howison and Frank J. Seinstra and Matthew Jones and Karen Cranston and Thomas L. Clune and Miguel de Val{-}Borro and Richard Littauer},
+	Date-Added = {2016-01-12 08:45:29 +0000},
+	Date-Modified = {2016-01-12 08:45:29 +0000},
+	Journal = {Journal of Open Research Software},
+	Note = {Accepted. Available at \url{http://arxiv.org/abs/1507.01715}},
+	Title = {Report on the Second Workshop on Sustainable Software for Science: Practice and Experiences {(WSSSPE2)}},
+	Year = {2016}}
+
+@article{Downs:2015aa,
+	Author = {Robert R Downs and W. Christopher Lenhardt and Erin Robinson and Ethan Davis and Nicholas Weber},
+	Date-Added = {2016-01-11 23:52:08 +0000},
+	Date-Modified = {2016-01-12 08:44:20 +0000},
+	Journal = {Journal of Open Research Software},
+	Pages = {e11},
+	Title = {Community Recommendations for Sustainable Scientific Software},
+	Volume = {3},
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.5334/jors.bt}}
+
+@article{Howison2015,
+	Author = {Howison, James and Bullard, Julia},
+	Date-Added = {2016-01-11 23:48:00 +0000},
+	Date-Modified = {2016-01-11 23:48:00 +0000},
+	Doi = {10.1002/asi.23538},
+	Journal = {Journal of the Association for Information Science and Technology},
+	Note = {In press, available at \url{http://dx.doi.org/10.1002/asi.23538}},
+	Title = {Software in the scientific literature: {Problems} with seeing, finding, and using software mentioned in the biology literature},
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1002/asi.23538}}
+
+@techreport{wssspe2_petre,
+	Author = {Marian Petre and Greg Wilson},
+	Date-Added = {2016-01-11 21:43:45 +0000},
+	Date-Modified = {2016-01-11 21:43:45 +0000},
+	Institution = {arXiv},
+	Note = {\url{http://arxiv.org/abs/1407.5648}},
+	Number = {1407.5648},
+	Title = {Code Review For and By Scientists},
+	Year = {2014}}
+
+@techreport{Knepley_WSSSPE,
+	Author = {Matthew G. Knepley and Jed Brown and Lois Curfman McInnes and Barry Smith},
+	Date-Added = {2016-01-11 21:38:56 +0000},
+	Date-Modified = {2016-01-11 21:38:56 +0000},
+	Institution = {figshare},
+	Note = {\url{http://dx.doi.org/10.6084/m9.figshare.785731}},
+	Number = {785731},
+	Title = {Accurately Citing Software and Algorithms Used in Publications},
+	Year = {2013}}
+
+@article{WSSSPE1,
+	Abstract = {Challenges related to development, deployment, and maintenance of reusable software for science are becoming a growing concern. Many scientists' research increasingly depends on the quality and availability of software upon which their works are built. To highlight some of these issues and share experiences, the First Workshop on Sustainable Software for Science: Practice and Experiences (WSSSPE1) was held in November 2013 in conjunction with the SC13 Conference. The workshop featured keynote presentations and a large number (54) of solicited extended abstracts that were grouped into three themes and presented via panels. A set of collaborative notes of the presentations and discussion was taken during the workshop.Unique perspectives were captured about issues such as comprehensive documentation, development and deployment practices, software licenses and career paths for developers. Attribution systems that account for evidence of software contribution and impact were also discussed. These include mechanisms such as Digital Object Identifiers, publication of `software papers', and the use of online systems, for example source code repositories like GitHub. This paper summarizes the issues and shared experiences that were discussed, including cross-cutting issues and use cases. It joins a nascent literature seeking to understand what drives software work in science, and how it is impacted by the reward systems of science. These incentives can determine the extent to which developers are motivated to build software for the long-term, for the use of others, and whether to work collaboratively or separately. It also explores community building, leadership, and dynamics in relation to successful scientific software.},
+	Author = {Daniel S. Katz and Sou-Cheng T. Choi and Hilmar Lapp and Ketan Maheshwari and Frank L\"{o}ffler and Matthew Turk and Marcus Hanwell and Nancy Wilkins-Diehr and James Hetherington and James Howison and Shel Swenson and Gabrielle Allen and Anne Elster and Bruce Berriman and Colin Venters},
+	Date-Added = {2016-01-11 21:38:36 +0000},
+	Date-Modified = {2016-01-12 08:44:20 +0000},
+	Issn = {2049-9647},
+	Journal = {Journal of Open Research Software},
+	Keywords = {sustainability; software development; policy; career paths},
+	Note = {\url{http://dx.doi.org/10.5334/jors.an}},
+	Number = {1},
+	Title = {Summary of the First Workshop on Sustainable Software for Science: Practice and Experiences ({WSSSPE1})},
+	Volume = {2},
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.5334/jors.an}}
+
+@article{WSSSPE3,
+	Author = {Daniel S. Katz and Kyle E. Niemeyer and Sou-Cheng T. Choi and James Hetherington and Frank L\"{o}ffler and Dan Gunter and Ray Idaszak and Steven R. Brandt and Mark A Miller and Sandra Gesing and Nick D. Jones and Nicholas Weber and Gabrielle Allen and Colin C. Venters and Ethan Davis and Lorraine Hwang and Ilian Todorov and Abani Patra and Miguel de Val{-}Borro},
+	Date-Added = {2016-01-11 21:38:20 +0000},
+	Date-Modified = {2016-01-12 08:47:32 +0000},
+	Note = {In preparation.},
+	Title = {Report on the Third Workshop on Sustainable Software for Science: Practice and Experiences {(WSSSPE3)}},
+	Year = {2016}}
+
+@misc{project_credit,
+	Author = {{CASRAI}},
+	Date-Added = {2016-01-11 21:37:13 +0000},
+	Date-Modified = {2016-01-12 09:10:04 +0000},
+	Howpublished = {\url{http://credit.casrai.org}},
+	Month = {October},
+	Note = {Accessed: 2016-01-11},
+	Title = {Project {CR}edi{T}},
+	Year = {2015}}
+
 @article{Katz:2015aa,
 	Author = {Daniel S. Katz and Arfon M Smith},
 	Date-Added = {2016-01-05 07:44:29 +0000},
@@ -213,4 +305,5 @@
 	Pages = {e7},
 	Title = {{Transitive Credit} and {JSON-LD}},
 	Volume = {3},
-	Year = {2015}}
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.5334/jors.by}}
