tried at a title... not sure

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -54,12 +54,12 @@
 \markboth{K. Niemeyer et al.}{title TBD}
 
 % Title portion
-\title{title TBD}
+\title{The challenge and promise of software citation for credit}
 
 \author{KYLE E. NIEMEYER
 \affil{Oregon State University}
-%ARFON M. SMITH
-%\affil{GitHub Inc.}
+ARFON M. SMITH
+\affil{GitHub Inc.}
 DANIEL S. KATZ
 \affil{University of Chicago \& Argonne National Laboratory}}
 % NOTE! Affiliations placed here should be for the institution where the
