a little better title

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -54,7 +54,7 @@
 \markboth{K. Niemeyer et al.}{title TBD}
 
 % Title portion
-\title{The challenge and promise of software citation for credit}
+\title{The challenge and promise of software citation for credit, identification, discovery, and reuse}
 
 \author{KYLE E. NIEMEYER
 \affil{Oregon State University}
