--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -204,6 +204,19 @@
 @string{zangewmathphys = {Z. Angew. Math. Phys.}}
 
 
+@inproceedings{Hannay:2009hv,
+	Address = {Vancouver, BC},
+	Author = {Hannay, J E and Langtangen, Hans Peter and MacLeod, C and Pfahl, Dietmar and Singer, J and Wilson, Greg},
+	Booktitle = {SECSE '09},
+	Date-Added = {2016-01-13 05:30:19 +0000},
+	Date-Modified = {2016-01-13 05:30:19 +0000},
+	Month = may,
+	Pages = {1--8},
+	Publisher = {IEEE},
+	Title = {How do scientists develop and use scientific software?},
+	Year = {2009},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/SECSE.2009.5069155}}
+
 @misc{CodeMeta,
 	Author = {Carl Boettiger and Matt Jones and Arfon M Smith and Yolanda Gil and Martin Fenner and Lars Holm Nielsen and Mark Hahnel},
 	Date-Added = {2016-01-12 08:53:31 +0000},
