--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -204,6 +204,37 @@
 @string{zangewmathphys = {Z. Angew. Math. Phys.}}
 
 
+@misc{PaperBadger,
+	Author = {{Mozilla Science Lab}},
+	Date-Added = {2016-01-13 07:14:55 +0000},
+	Date-Modified = {2016-01-13 07:17:25 +0000},
+	Howpublished = {\url{https://badges.mozillascience.org/}},
+	Note = {Accessed: 2016-01-12},
+	Title = {PaperBadger},
+	Year = {2015}}
+
+@misc{DataCitation2014,
+	Address = {San Diego, CA},
+	Author = {{Data Citation Synthesis Group}},
+	Date-Added = {2016-01-13 07:09:40 +0000},
+	Date-Modified = {2016-01-13 07:09:56 +0000},
+	Editor = {Maryann Martone},
+	Howpublished = {\url{https://www.force11.org/group/joint-declaration-data-citation-principles-final}},
+	Note = {Accessed: 2015-10-28},
+	Publisher = {FORCE11},
+	Title = {Joint Declaration of Data Citation Principles},
+	Year = {2014}}
+
+@misc{AAS:2016,
+	Author = {{American Astronomical Society}},
+	Date-Added = {2016-01-13 06:41:30 +0000},
+	Date-Modified = {2016-01-13 07:19:57 +0000},
+	Howpublished = {\url{http://journals.aas.org/policy/software.html}},
+	Month = jan,
+	Note = {Accessed: 2016-01-12},
+	Title = {Policy Statement on Software},
+	Year = {2016}}
+
 @inproceedings{Hannay:2009hv,
 	Address = {Vancouver, BC},
 	Author = {Hannay, J E and Langtangen, Hans Peter and MacLeod, C and Pfahl, Dietmar and Singer, J and Wilson, Greg},
@@ -220,8 +251,9 @@
 @misc{CodeMeta,
 	Author = {Carl Boettiger and Matt Jones and Arfon M Smith and Yolanda Gil and Martin Fenner and Lars Holm Nielsen and Mark Hahnel},
 	Date-Added = {2016-01-12 08:53:31 +0000},
-	Date-Modified = {2016-01-12 09:10:50 +0000},
-	Howpublished = {\url{http://codemeta.github.io/}, Accessed: 2016-01-12},
+	Date-Modified = {2016-01-13 07:19:34 +0000},
+	Howpublished = {\url{http://codemeta.github.io/}},
+	Note = {Accessed: 2016-01-12},
 	Title = {{CodeMeta}},
 	Year = {2016}}
 
@@ -242,8 +274,7 @@
 	Pages = {e11},
 	Title = {Community Recommendations for Sustainable Scientific Software},
 	Volume = {3},
-	Year = {2015},
-	Bdsk-Url-1 = {http://dx.doi.org/10.5334/jors.bt}}
+	Year = {2015}}
 
 @article{Howison2015,
 	Author = {Howison, James and Bullard, Julia},
@@ -251,10 +282,9 @@
 	Date-Modified = {2016-01-11 23:48:00 +0000},
 	Doi = {10.1002/asi.23538},
 	Journal = {Journal of the Association for Information Science and Technology},
-	Note = {In press, available at \url{http://dx.doi.org/10.1002/asi.23538}},
+	Note = {In press},
 	Title = {Software in the scientific literature: {Problems} with seeing, finding, and using software mentioned in the biology literature},
-	Year = {2015},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1002/asi.23538}}
+	Year = {2015}}
 
 @techreport{wssspe2_petre,
 	Author = {Marian Petre and Greg Wilson},
@@ -277,7 +307,6 @@
 	Year = {2013}}
 
 @article{WSSSPE1,
-	Abstract = {Challenges related to development, deployment, and maintenance of reusable software for science are becoming a growing concern. Many scientists' research increasingly depends on the quality and availability of software upon which their works are built. To highlight some of these issues and share experiences, the First Workshop on Sustainable Software for Science: Practice and Experiences (WSSSPE1) was held in November 2013 in conjunction with the SC13 Conference. The workshop featured keynote presentations and a large number (54) of solicited extended abstracts that were grouped into three themes and presented via panels. A set of collaborative notes of the presentations and discussion was taken during the workshop.Unique perspectives were captured about issues such as comprehensive documentation, development and deployment practices, software licenses and career paths for developers. Attribution systems that account for evidence of software contribution and impact were also discussed. These include mechanisms such as Digital Object Identifiers, publication of `software papers', and the use of online systems, for example source code repositories like GitHub. This paper summarizes the issues and shared experiences that were discussed, including cross-cutting issues and use cases. It joins a nascent literature seeking to understand what drives software work in science, and how it is impacted by the reward systems of science. These incentives can determine the extent to which developers are motivated to build software for the long-term, for the use of others, and whether to work collaboratively or separately. It also explores community building, leadership, and dynamics in relation to successful scientific software.},
 	Author = {Daniel S. Katz and Sou-Cheng T. Choi and Hilmar Lapp and Ketan Maheshwari and Frank L\"{o}ffler and Matthew Turk and Marcus Hanwell and Nancy Wilkins-Diehr and James Hetherington and James Howison and Shel Swenson and Gabrielle Allen and Anne Elster and Bruce Berriman and Colin Venters},
 	Date-Added = {2016-01-11 21:38:36 +0000},
 	Date-Modified = {2016-01-12 08:44:20 +0000},
@@ -289,7 +318,7 @@
 	Title = {Summary of the First Workshop on Sustainable Software for Science: Practice and Experiences ({WSSSPE1})},
 	Volume = {2},
 	Year = {2014},
-	Bdsk-Url-1 = {http://dx.doi.org/10.5334/jors.an}}
+    Pages = {e6}}
 
 @article{WSSSPE3,
 	Author = {Daniel S. Katz and Kyle E. Niemeyer and Sou-Cheng T. Choi and James Hetherington and Frank L\"{o}ffler and Dan Gunter and Ray Idaszak and Steven R. Brandt and Mark A Miller and Sandra Gesing and Nick D. Jones and Nicholas Weber and Gabrielle Allen and Colin C. Venters and Ethan Davis and Lorraine Hwang and Ilian Todorov and Abani Patra and Miguel de Val{-}Borro},
@@ -304,7 +333,7 @@
 	Date-Added = {2016-01-11 21:37:13 +0000},
 	Date-Modified = {2016-01-12 09:10:04 +0000},
 	Howpublished = {\url{http://credit.casrai.org}},
-	Month = {October},
+	Month = oct,
 	Note = {Accessed: 2016-01-11},
 	Title = {Project {CR}edi{T}},
 	Year = {2015}}
@@ -318,5 +347,4 @@
 	Pages = {e7},
 	Title = {{Transitive Credit} and {JSON-LD}},
 	Volume = {3},
-	Year = {2015},
-	Bdsk-Url-1 = {http://dx.doi.org/10.5334/jors.by}}
+	Year = {2015}}
