removed redundant keywords

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -114,7 +114,7 @@ DANIEL S. KATZ
 
 \terms{Software, Citation, Credit, Attribution}
 
-\keywords{Software citation, Software credit}
+%\keywords{Software citation, Software credit}
 
 \acmformat{Kyle E.\ Niemeyer, Arfon M.\ Smith, and Daniel S.\ Katz, 2016. Title TBD.}
 % At a minimum you need to supply the author names, year and a title.
