added back keywords, after fixing terms to required options

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -112,9 +112,9 @@ DANIEL S. KATZ
 % End generated code
 %
 
-\terms{Software, Citation, Credit, Attribution}
+\terms{Documentation, Standardization}
 
-%\keywords{Software citation, Software credit}
+\keywords{Software citation, Software credit, attribution}
 
 \acmformat{Kyle E.\ Niemeyer, Arfon M.\ Smith, and Daniel S.\ Katz, 2016. Title TBD.}
 % At a minimum you need to supply the author names, year and a title.
@@ -130,7 +130,7 @@ DANIEL S. KATZ
 
 \begin{bottomstuff}
 Some work by D.\ S.\ Katz was supported by the National Science Foundation (NSF) while working at the Foundation; any opinion, finding, and conclusions or recommendations expressed in this material are those of the author and do not necessarily reflect the views of the NSF.
-Some work by K.\ E.\ Niemeyer was supported by the NSF under grant ACI-1535065.
+Some work by K.\ E.\ Niemeyer was supported by NSF grant ACI-1535065.
 
 Author's addresses: K.\ E.\ Niemeyer, School of Mechanical, Industrial, and Manufacturing Engineering, Oregon State University; 
 A.\ M.\ Smith,
