fixed some refs

--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -279,12 +279,12 @@
 @article{Howison2015,
 	Author = {Howison, James and Bullard, Julia},
 	Date-Added = {2016-01-11 23:48:00 +0000},
-	Date-Modified = {2016-01-11 23:48:00 +0000},
-	Doi = {10.1002/asi.23538},
+	Date-Modified = {2016-01-13 07:35:26 +0000},
 	Journal = {Journal of the Association for Information Science and Technology},
 	Note = {In press},
 	Title = {Software in the scientific literature: {Problems} with seeing, finding, and using software mentioned in the biology literature},
-	Year = {2015}}
+	Year = {2015},
+    Doi = {10.1002/asi.23538}}
 
 @techreport{wssspe2_petre,
 	Author = {Marian Petre and Greg Wilson},
@@ -313,12 +313,12 @@
 	Issn = {2049-9647},
 	Journal = {Journal of Open Research Software},
 	Keywords = {sustainability; software development; policy; career paths},
-	Note = {\url{http://dx.doi.org/10.5334/jors.an}},
 	Number = {1},
+	Pages = {e6},
 	Title = {Summary of the First Workshop on Sustainable Software for Science: Practice and Experiences ({WSSSPE1})},
 	Volume = {2},
 	Year = {2014},
-    Pages = {e6}}
+    Doi = {10.5334/jors.an}}
 
 @article{WSSSPE3,
 	Author = {Daniel S. Katz and Kyle E. Niemeyer and Sou-Cheng T. Choi and James Hetherington and Frank L\"{o}ffler and Dan Gunter and Ray Idaszak and Steven R. Brandt and Mark A Miller and Sandra Gesing and Nick D. Jones and Nicholas Weber and Gabrielle Allen and Colin C. Venters and Ethan Davis and Lorraine Hwang and Ilian Todorov and Abani Patra and Miguel de Val{-}Borro},
@@ -341,10 +341,10 @@
 @article{Katz:2015aa,
 	Author = {Daniel S. Katz and Arfon M Smith},
 	Date-Added = {2016-01-05 07:44:29 +0000},
-	Date-Modified = {2016-01-05 07:46:53 +0000},
-	Doi = {10.5334/jors.by},
+	Date-Modified = {2016-01-13 07:35:26 +0000},
 	Journal = {Journal of Open Research Software},
 	Pages = {e7},
 	Title = {{Transitive Credit} and {JSON-LD}},
 	Volume = {3},
-	Year = {2015}}
+	Year = {2015},
+    Doi = {10.5334/jors.by}}
