trying to respond to more notes

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -200,8 +200,9 @@ Key challenges are the need to:
 \item develop infrastructure to support indexing of software citations along with (or complementary to) the existing publication citation ecosystem, and
 \item determine standard practices for peer review of software.
 \end{itemize}
-Although individual citation formats will vary based on the particular style of journals, conferences, or professional societies, citation of software in publications must minimally include software name, primary authors\slash contributors, DOI or other unique identifier, and location where the software has been published\slash archived (DOI or URL). 
-The metadata needed for software to be cited includes software name, DOI, authors\slash contributors (with names and ORCIDs), software dependencies (in the form of DOIs), and any other people\slash artifacts that would be cited or acknowledged in a paper. \note{not sure about the previous two sentences?  explain more?  combine?}
+\note{May need transition from list to these suggestions}
+Individual citation formats will vary based on the particular style of journals, conferences, or professional societies, but citation of software in publications should minimally include software name, primary authors\slash contributors, DOI or other unique identifier, and location where the software has been published\slash archived (DOI or URL). 
+Metadata needed for software to be cited includes similar information, in addition to authors and software dependencies using digital identifiers (e.g., ORCID, DOI).
 This information should be provided in a CITATION file, potentially in JSON, XML, or DOAP (RDF\slash XML) formats---rather than or to supplement plaintext---to allow automatic processing\slash parsing.
 
 However, additional research and development efforts are needed to solve the remaining challenges.
